# hazelPurplediaisdhihdushu

./: README.md  Исходники.rar
Исходники/: j.json  pyproject.toml
Исходники/razom/: config.py  main.py  test.py
Исходники/razom/admin/: callbacks.py  models.py  states.py
Исходники/razom/admin/dialogs/: base.py  items.py  moderation.py  pagination.py
Исходники/razom/client/: callbacks.py  handlers.py  models.py  states.py
Исходники/razom/client/dialogs/: base_menu.py  items.py  utils.py
